--- a/templates/index.html
+++ b/templates/index.html
@@ -19,12 +19,12 @@
 		                padding-bottom: 20px;
 		            }
 		        </style>
+		        
 		        <link rel="stylesheet" href="../static/css/bootstrap-theme.min.css">
 		        <link rel="stylesheet" href="../static/css/main.css">
 
 		        <script src="../static/js/vendor/modernizr-2.8.3.min.js"></script>
 				</script>
-		 
 		</head>
     <!DOCTYPE html> 
 	<body>
@@ -38,11 +38,12 @@
 	                    </li>
 	                    <li role="presentation"><a href="#">Settings</a>
 	                    </li>
+	                    <li role="presentation"><a href="showTaskReview" ><img src="../static/img/notification.png" width="40" /></a>
+	                    </li>
 	                </ul>
 	            </nav>
 	            <h3 class="text-muted">ChoreWheel</h3>
 	        </div>
-	 
 	        <div class="jumbotron">
 	            <h2>Task List</h2>
 				  <p>Here is a list of all the things we need to get done: </p>            
@@ -81,8 +82,6 @@
 	        </div>
 	        <footer class="footer">
 	        </footer>
-	 
 	    </div>
 	</body>
- 
 </html>
